# agents-course

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/: 01_sql.py
src/agents_course/exam/: agent.py  answerbank.py  run.py  submission.py  tools.py
src/agents_course/exercise01/: app.py
src/agents_course/exercise02/: app.py
src/agents_course/exercise02/tools/: __init__.py  final_answer.py  visit_webpage.py
src/agents_course/exercise03/: notebook.ipynb
src/agents_course/exercise04/: notebook.ipynb
src/agents_course/exercise05/: app.py  retriever.py  tools.py
