[tool.poetry]
name = "agents-course"
version = "0.1.0"
description = ""
authors = ["hench89 <henrik.c@maersk.com>"]
readme = "README.md"
packages = [
  {include = "*", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"
smolagents = {extras = ["litellm"], version = "1.9.2"}
sqlalchemy = "^2.0.41"
huggingface-hub = "^0.31.4"
duckduckgo-search = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
